[package]
name = "hackit"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0.15", features = ["derive"] }
colored = "2.0.0"
data-encoding = "2.3.2"
md-5 = "0.10.5"
pnet = { version = "0.31.0", features = ["std"] }
serde = "1.0.145"
serde_json = "1.0.87"
trust-dns-resolver = "0.22.0"
urlencoding = "2.1.2"
